test/should-fail/badhex.f3
/**
 * Ensure that malformed hex numbers are caught by the lexer/parser
 * @test/compile-error
 */
var v = 0x;
v = 0xGGG;
v = 0x9.AB;
v = [0x9..88];



